# vep-extras

./: .gitignore  INSTALL.md  LICENSE  Makefile.am  README.md  configure.ac  vep-filter-impact  vepretty
doc/: Makefile.am  vep-extras.7.md  vep-filter-impact.1.md  vepretty.1.md
src/: Makefile.am  vep-filter-impact  vepretty
test/data/: sample_vep.pass.vcf  sample_vep.strict.pass.vcf  sample_vep.vcf
